--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -6,7 +6,7 @@
 <ul>
   {{#each burger}}
     {{#unless devoured}}
-      {{> burger/burger-block sleep=true}}
+      {{> burgers/burger-block devoured=true}}
     {{/unless}}
   {{/each}}
 </ul>
@@ -14,19 +14,21 @@
 <h2>Burgers that are devoured!</h2>
 
 <ul>
-  {{#each burger}}
+  {{#each burgers}}
     {{#if devoured}}
-      {{> burger/burger-block sleep=false}}
+      {{> burgers/burger-block devoured=false}}
     {{/if}}
   {{/each}}
 </ul>
 
-<h2>Add a burger</h2>
-<form class="create-form">
+<h2>Add a Burger</h2>
+{{!-- the action connects the form to the post route  and the method allows for the POST to work--}}
+<form class="create-form" action="/api/burger" method="POST">
 
   <div class="form-group">
     <label for="ca">Burger Name:</label>
     <input type="text" id="ca" name="name">
+    <input type="text" id="ca" name="burger_name">
   </div>
 
   <button type="submit">Add Burger</button>
