Added a new image.

--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,4 +1,4 @@
-<img src="https://lh3.googleusercontent.com/proxy/hnYRikbg0hEdRVi_9_fqeaWIDvbmjHxmJf6-lQzzgPqAagYgtHnrhSm8jrb3KUVk0XMDamg-FhQ5eiCZVgc-Tql6bw" alt="">
+<img src="https://i.pinimg.com/originals/e6/9b/5e/e69b5ef0349fd2277256f1d2acbb5dec.png" alt="">
 <h1>Burgers</h1>
 
 <h2>Burgers that are not devoured!</h2>
