--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -4,9 +4,13 @@
 <h2>Burgers that are not devoured!</h2>
 
 <ul>
-  {{#each burger}}
+  {{#each burgers}}
     {{#unless devoured}}
-      {{> burgers/burger-block devoured=true}}
+    
+      <h3>
+        {{burger_name}}
+      </h3>
+      <button class="change-devoured" data-id={{id}}>Devour</button>
     {{/unless}}
   {{/each}}
 </ul>
@@ -16,7 +20,9 @@
 <ul>
   {{#each burgers}}
     {{#if devoured}}
-      {{> burgers/burger-block devoured=false}}
+     <h3>
+        {{burger_name}}
+     </h3>
     {{/if}}
   {{/each}}
 </ul>
