Added a delete button.

--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -11,6 +11,7 @@
         {{burger_name}}
       </h3>
       <button class="change-devoured" data-id={{id}}>Devour</button>
+
     {{/unless}}
   {{/each}}
 </ul>
@@ -23,6 +24,7 @@
      <h3>
         {{burger_name}}
      </h3>
+      <button class="delete-burger" data-id={{id}}>Delete</button>
     {{/if}}
   {{/each}}
 </ul>
